# linux-void

./: .ansible-lint  .gitignore  Pipfile  README.md  \  ansible.cfg  install-fresh.yml  install.sh  pyproject.toml
group_vars/all/: _init.yml  environment.yml  programming.yml  system.yml  tools_and_db.yml  user.yml
group_vars/localhost/: main.yml
roles/_0package/defaults/: main.yml
roles/_0package/handlers/: main.yml
roles/_0package/tasks/: buildasdf.yml  buildsource.yml  buildsourcewithgit.yml  installwithasdf.yml  main.yml  ppa.yml  snap.yml
roles/_1package_repo/tasks/: main.yml
roles/_2snap/tasks/: main.yml
roles/_init/tasks/: base.yml  main.yml  misc.yml
roles/_system/templates/: test.source_list.j2
roles/browsers/defaults/: main.yml
roles/browsers/handlers/: main.yml
roles/browsers/meta/: main.yml
roles/browsers/tasks/: firefox.yml  main.yml
roles/browsers/tests/: test.yml
roles/environment/defaults/: main.yml
roles/environment/handlers/: main.yml
roles/environment/meta/: main.yml
roles/environment/tasks/: accounts.yml  auth.yml  create.yml  dotfiles.yml  dotfiles_root.yml  folders.yml  locale.yml  main.yml  visudo.yml
roles/prolang/defaults/: main.yml
roles/prolang/handlers/: main.yml
roles/prolang/tasks/: asdf.yml  golang.yml  main.yml  nodejs.yml  python.yml  ruby.yml  rust.yml
roles/set-variables/tasks/: main.yml  misc.yml  pkgs.yml  setvars.yml
roles/system-user/defaults/: main.yml
roles/system-user/meta/: main.yml
roles/system-user/tasks/: accounts.yml  auth.yml  create.yml  (+6 more)
tmp_example/: user  userpass-SHA5
(+218 files in other folders)
