[tool.poetry]
name = "linux-void"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.1.0"
paramiko = "^2.9.1"
molecule = {extras = ["docker", "lint"], version = "^3.5.2"}

[tool.poetry.dev-dependencies]
ansible-lint = {extras = ["core", "yamllint"], version = "^5.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
